realice cambio en el archivo alumno2

--- a/bootcamp_alumno2.html
+++ b/bootcamp_alumno2.html
@@ -9,5 +9,7 @@
     <h1>Datos personales 2</h1>
     <p>Nombre: miguel Dominguez</p>
     <p>Nombre: miguel Dominguez</p>
+    <p>Nombre: miguel Dominguez3</p>
+    <p>Nombre: miguel Dominguez4</p>
 </body>
 </html>
